# arXivResearcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  dashboard.py  mine_arxiv.py  mine_arxiv_comprehensive.py  pyproject.toml  run_research_mining.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml  update-data.yml
arxiv_research/: __init__.py
arxiv_research/analyzers/: __init__.py  citation_trajectory.py  embedding_analyzer.py  fulltext_analyzer.py  gap_analyzer.py  text_analyzer.py
arxiv_research/collectors/: __init__.py
docs/images/: .gitkeep
examples/: basic_usage.py
homebrew/: arxiv-researcher.rb
notebooks/: research_analysis.ipynb
scoop/: arxiv-researcher.json
src/arxiv_researcher/: __init__.py  analyzer.py  cli.py  collector.py  dashboard.py  reporter.py
src/arxiv_researcher/analyzers/: __init__.py  author_trajectory.py  benchmark_tracker.py  citation_graph.py  impact_predictor.py  network_analyzer.py  text_analyzer.py  trend_analyzer.py
src/arxiv_researcher/config/: term_merges.yaml  text_filters.yaml
tests/: __init__.py  test_collector.py
