[project]
name = "arxiv-researcher"
version = "1.0.0"
description = "arXiv research intelligence and visualization dashboard for exploring research data, identifying trends, and discovering opportunities"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "David Condrey", email = "david@writerslogic.com"}
]
maintainers = [
    {name = "David Condrey", email = "david@writerslogic.com"}
]
keywords = [
    "arxiv",
    "research",
    "data-mining",
    "data-visualization",
    "machine-learning",
    "scientific-papers",
    "citation-analysis",
    "trend-analysis",
    "research-intelligence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pyvis>=0.3.2",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",
]
fulltext = [
    "pymupdf>=1.23.0",
]
all = [
    "arxiv-researcher[dashboard,embeddings,fulltext]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/dcondrey/arXivResearcher"
Documentation = "https://github.com/dcondrey/arXivResearcher#readme"
Repository = "https://github.com/dcondrey/arXivResearcher"
Issues = "https://github.com/dcondrey/arXivResearcher/issues"
Changelog = "https://github.com/dcondrey/arXivResearcher/blob/main/CHANGELOG.md"

[project.scripts]
arxiv-researcher = "arxiv_researcher.cli:main"
arxiv-dashboard = "arxiv_researcher.dashboard:run_dashboard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_researcher"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["arxiv_researcher"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=arxiv_researcher --cov-report=term-missing"

[tool.coverage.run]
source = ["src/arxiv_researcher"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
